Fixed the swagger page.
